syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/Asuha-a/ProgrammingLessonMarket/internal/pkg/pb/lesson";

package lesson;

service Lesson {
  rpc ListLessons (ListLessonsRequest) returns (stream ListLessonsReply) {}
  rpc GetLesson (GetLessonRequest) returns (GetLessonReply) {}
  rpc CreateLesson (CreateLessonRequest) returns (CreateLessonReply) {}
  rpc UpdateLesson (UpdateLessonRequest) returns (UpdateLessonReply) {}
  rpc DeleteLesson (DeleteLessonRequest) returns (google.protobuf.Empty) {}
}

message ListLessonsRequest {
  string course_id = 1;
}

message ListLessonsReply {
  string uuid = 1;
  string user_id = 2;
  string course_id = 3;
  int64 sequence_number = 4;
  string title = 5;
  string introduction = 6;
  string body = 7;
  string default_code = 8;
  string answer_code = 9;
  string language = 10;
}

message GetLessonRequest {
  string uuid = 1;
}

message GetLessonReply {
  string uuid = 1;
  string user_id = 2;
  string course_id = 3;
  int64 sequence_number = 4;
  string title = 5;
  string introduction = 6;
  string body = 7;
  string default_code = 8;
  string answer_code = 9;
  string language = 10;
}

message CreateLessonRequest {
  string token = 1;
  string course_id = 2;
  int64 sequence_number = 3;
  string title = 4;
  string introduction = 5;
  string body = 6;
  string default_code = 7;
  string answer_code = 8;
  string language = 9;
}
  
message CreateLessonReply {
  string uuid = 1;
  string user_id = 2;
  string course_id = 3;
  int64 sequence_number = 4;
  string title = 5;
  string introduction = 6;
  string body = 7;
  string default_code = 8;
  string answer_code = 9;
  string language = 10;
}

message UpdateLessonRequest {
  string token = 1;
  string uuid = 2;
  string user_id = 3;
  string course_id = 4;
  int64 sequence_number = 5;
  string title = 6;
  string introduction = 7;
  string body = 8;
  string default_code = 9;
  string answer_code = 10;
  string language = 11;
}

message UpdateLessonReply {
  string uuid = 1;
  string user_id = 2;
  string course_id = 3;
  int64 sequence_number = 4;
  string title = 5;
  string introduction = 6;
  string body = 7;
  string default_code = 8;
  string answer_code = 9;
  string language = 10;
}

message DeleteLessonRequest {
  string token = 1;
  string uuid = 2;
}
